--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <script src="./main.js"></script>
   </head>
   <body>
-    
+    <header>
+        <h1>JS Test</h1>
+        <h3>Exercise 3 - DOM and Input</h3>
+      </header>
+      <main>
+        <div>
+          <label>
+            <input type="text" id="userText" />
+          </label>
+          <button id="submitButton">Submit</button>
+        </div>
+      </main>
   </body>
 </html>
